# harbour-timelapse-tools

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  harbour-timelapse-tools.desktop
.github/workflows/: build_and_test_on_ubuntu_20_04.yml  build_and_test_on_ubuntu_22_04.yml  build_and_test_on_ubuntu_24_04.yml
.tx/: config
CMakeMod/: Version.h.cmake
dependencies/: CMakeLists.txt  v4l-utils-1.22.1.tar.bz2
qml/: main.qml
qml/custom/: Utils.js
qml/pages/: Assembly.qml  Capture.qml  Cover.qml  MainPage.qml  NewTimeLapsePage.qml
rpm/: harbour-osmscout.changes.in  harbour-osmscout.spec  harbour-timelapse-tools.changes.in  harbour-timelapse-tools.spec
scripts/: uploadQml.sh
src/: Arguments.h  BatteryMonitor.cpp  BatteryMonitor.h  CameraModel.cpp  CameraModel.h  IconProvider.h  QmlCameraDevice.cpp  QmlCameraDevice.h  QmlTimeLapseAssembly.cpp  QmlTimeLapseAssembly.h  QmlTimeLapseCapture.cpp  QmlTimeLapseCapture.h  TimeLapseCapture.cpp  TimeLapseCapture.h  TimeLapseItem.cpp  TimeLapseItem.h  TimeLapseModel.cpp  TimeLapseModel.h  TimeLapseTools.cpp  TimeLapseTools.h
src/osmscout/util/: CmdLineParsing.cpp  CmdLineParsing.h  String.cpp  String.h
translations/: cs.ts  en.ts
